--- a/package.json
+++ b/package.json
@@ -14,25 +14,28 @@
   "license": "UNLICENSED",
   "dependencies": {
     "axios": "^0.17.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
+    "cors": "^2.8.5",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^4.11.6",
+    "morgan": "^1.7.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "underscore": "^1.8.3",
-    "morgan": "^1.7.0",
-    "cors": "^2.8.5"
+    "reactjs-popup": "^2.0.5",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "eslint": "^3.3.1",
-    "supertest": "^2.0.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "eslint": "^3.3.1",
+    "nodemon": "^2.0.7",
+    "supertest": "^2.0.0",
     "webpack": "^2.2.1"
   }
 }
